--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,30 @@
 /* Use this directive to control where Tailwind injects the responsive variations of each utility */
 /* If omitted, Tailwind will append these classes to the very end of your stylesheet by default */
 @tailwind screens;
+
+/* Add styles to the base styles: https://tailwindcss.com/docs/adding-base-styles */
+@layer base {
+}
+
+/* Add styles to components */
+@layer components {
+  .btn {
+    @apply inline-block px-4 py-2 text-base font-medium border border-transparent rounded-md;
+  }
+  .btn-primary {
+    @apply font-medium text-white bg-indigo-500 hover:bg-opacity-75 focus:outline-none;
+  }
+  .btn-secondary {
+    @apply font-medium text-indigo-700 bg-indigo-100 hover:bg-indigo-200;
+  }
+  .btn-outline {
+    @apply font-medium text-indigo-600 border border-indigo-600 hover:bg-indigo-50;
+  }
+  .btn-flat {
+    @apply font-medium text-indigo-600 hover:bg-indigo-50;
+  }
+}
+
+/* Add styles to utilities */
+@layer utilities {
+}
