--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
-/* This injects Tailwind's base styles and any base styles registered by plugins */
 @tailwind base;
-
-/* This injects Tailwind's component classes and any component classes registered by plugins */
 @tailwind components;
-
-/* This injects Tailwind's utility classes and any utility classes registered by plugins */
 @tailwind utilities;
 
 /* Use this directive to control where Tailwind injects the responsive variations of each utility */
@@ -13,6 +8,9 @@
 
 /* Add styles to the base styles: https://tailwindcss.com/docs/adding-base-styles */
 @layer base {
+  * {
+    @apply text-gray-700; /* Default font color */
+  }
 }
 
 /* Add styles to components */
@@ -21,16 +19,16 @@
     @apply inline-block px-4 py-2 text-base font-medium border border-transparent rounded-md;
   }
   .btn-primary {
-    @apply font-medium text-white bg-indigo-500 hover:bg-opacity-75 focus:outline-none;
+    @apply font-medium text-white bg-primary-500 hover:bg-opacity-75 focus:outline-none;
   }
   .btn-secondary {
-    @apply font-medium text-indigo-700 bg-indigo-100 hover:bg-indigo-200;
+    @apply font-medium text-primary-700 bg-primary-100 hover:bg-primary-200;
   }
   .btn-outline {
-    @apply font-medium text-indigo-600 border border-indigo-600 hover:bg-indigo-50;
+    @apply font-medium text-primary-600 border border-primary-600 hover:bg-primary-50;
   }
   .btn-flat {
-    @apply font-medium text-indigo-600 hover:bg-indigo-50;
+    @apply font-medium text-primary-600 hover:bg-primary-50;
   }
 }
 
