--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 /* Add styles to the base styles: https://tailwindcss.com/docs/adding-base-styles */
 @layer base {
-  * {
+  #app-main {
     @apply text-gray-700; /* Default font color */
   }
 }
